Fix images having 0px height on mobile on profiles page

--- a/apps/next-website/components/app-header/app-header.scss
+++ b/apps/next-website/components/app-header/app-header.scss
@@ -49,6 +49,7 @@
 
     img {
       height: 100%;
+      width: auto;
       aspect-ratio: 1;
       max-width: 100%;
       max-height: 100%;
