--- a/apps/next-website/components/preview-card/preview-card.scss
+++ b/apps/next-website/components/preview-card/preview-card.scss
@@ -24,7 +24,7 @@
   .image-container {
     position: relative;
     width: 100%;
-    height: 50%;
+    height: 25rem;
     overflow: hidden;
   }
 }
